pwt-macros/tests/builder/unknown_type.stderr
error[E0405]: cannot find trait `IntoFoo` in this scope
 --> tests/builder/unknown_type.rs:5:15
  |
5 |     #[builder(IntoFoo, into_foo)]
  |               ^^^^^^^ not found in this scope
